# semantic-cuts

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  audio.py  database.py  main.py  manager.py  minion.py  scene_detect.py  search.py  server.py  worker.py
app/algo/: index.py
app/database/: index.py
app/utils/: scene_detect.py  structural_scene_detector.py
reports/: budget-plan.md  product-plan.md
scripts/: cleanup_qdrant.py  lab_01_clip.py  test.py
ui/: admin.py  app.py  frontend.py
web/: index.html  package-lock.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/api/: client.ts  health.ts  search.ts  videos.ts
web/src/components/admin/: IngestForm.tsx  VideoLibraryTable.tsx
web/src/components/layout/: Navbar.tsx  PageShell.tsx
web/src/components/search/: ResultsGrid.tsx  SearchBar.tsx  VideoCard.tsx
web/src/components/shared/: EmptyState.tsx  ProgressBar.tsx  Spinner.tsx  StatusBadge.tsx  VideoPlayer.tsx
web/src/hooks/: useHealth.ts  useJobProgress.ts  useSearch.ts  useTheme.ts  useVideos.ts
web/src/pages/: AdminPage.tsx  DashboardPage.tsx  GalleryPage.tsx  LandingPage.tsx  ProcessPage.tsx  SearchPage.tsx  StatsPage.tsx
web/src/types/: index.ts
